<resources>
    <string name="app_name">startPage</string>
    <string name="startapp">시작하기</string>
    <string name="setting">설정</string>
    <string name="finish">종료</string>
    <string name="close">닫기</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="cancel">취소</string>
    <string name="agree">동의</string>
    <string name="next">다음</string>
    <string name="confirm">확인</string>
    <string name="more">더보기</string>
    <string name="complite">완료</string>
    <string name="demand">문의하기</string>

    <string name="start_text1">먹고싶던</string>
    <string name="start_text2">트렌드를</string>
    <string name="start_text3">쇼핑하다</string>
    <string name="login">로그인</string>
    <string name="logingoogle">구글 로그인</string>
    <string name="notyetmember">아직 회원이 아니신가요?</string>
    <string name="join">회원가입</string>
    <string name="agreement">모두 확인 후 동의합니다.</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="password">패스워드</string>
    <string name="password2">패스워드확인</string>
    <string name="phone"> 연락처</string>
    <string name="address">주소</string>
    <string name="email">이메일</string>
    <string name="birth">생년월일</string>
    <string name="searchid">아이디 찾기</string>
    <string name="searchpw">비밀번호 찾기</string>

    <!-- 다이알로그-->
    <string name="joinconfirm">회원가입을 하시겠습니까?</string>

</resources>
