<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_9B51E0"
    android:orientation="vertical"
    tools:context=".StartActivity">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/start_text1"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_text_size"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/start_text2"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_text_size"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/start_text3"
            android:textColor="@color/white"
            android:textSize="@dimen/intro_text_size"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp"
            android:scaleType="center"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="51dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="25dp">

        <Button
            android:id="@+id/btngoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/logingoogle"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnjoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/notyetmember"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size_s" />
    </LinearLayout>

</LinearLayout>