<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_9B51E0"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:scaleType="center"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_s" />

            <EditText
                android:id="@+id/inputSearchId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="10dp"
                android:background="@drawable/inputbox" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/default_text_size_s" />

            <EditText
                android:id="@+id/inputboxpw"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/inputbox"
                android:inputType="textPassword|textWebPassword"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/btnlogin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/searchid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchid"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/searchpw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/searchpw"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>