<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_9B51E0"
    android:orientation="vertical"
    tools:context=".JoinActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:foregroundGravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputSearchId"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/inputbox"
                        android:paddingLeft="15dp"
                        android:singleLine="true"                        />

                    <Button
                        android:id="@+id/id_check"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/inputbox"
                        android:text="중복" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:nextFocusDown="@id/inputboxpw"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxpw"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:inputType="textPassword|textWebPassword"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/password2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxpw2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:inputType="textPassword|textWebPassword"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxaddr"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/inputbox"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxemail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:hint="ex)aaa@aaaa.aaa"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxphone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:hint="ex)01012345678"
                    android:inputType="phone"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/birth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_text_size_s" />

                <EditText
                    android:id="@+id/inputboxbirth"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/inputbox"
                    android:paddingLeft="15dp"
                    android:hint="ex)19990101"
                    android:inputType="date"
                    android:singleLine="true"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnjoin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/join"
        android:textColor="@color/white" />


</LinearLayout>